# song-prompter

./: CLAUDE.md  Devlog.md  package-lock.json  package.json
.github/workflows/: build.yml
docs/: scroll-sync-prompt.md
docs/superpowers/plans/: 2026-04-14-song-prompter-tauri.md
docs/superpowers/specs/: 2026-04-14-song-prompter-tauri-design.md
src/: app.js  i18n.js  index.html  ltc-decoder.js  styles.css  viewer.html  viewer.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
